# point_group

./: Cargo.toml  README.md
src/: geometry.rs  lib.rs  main.rs  point_groups.rs  utils.rs
tests/: test_find_pont_group_realistic.rs
