[package]
name = "point_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.15.0"

[[bin]]
name = "point_group_main"
path = "src/main.rs"

[lib]
name = "point_group"
path = "src/lib.rs"
